Fixed some alignment

--- a/style.css
+++ b/style.css
@@ -186,11 +186,11 @@ footer .social:hover {
 
 #instagram {
 	right: 1rem;
-	bottom: 4rem;
+	bottom: 3.5rem;
 }
 
 #facebook {
-	right: 4rem;
+	right: 3.5rem;
 	bottom: 1rem;
 }
 
@@ -202,7 +202,7 @@ footer .social:hover {
 
 main h2 {
 	position: absolute;
-	top: 30%;
+	top: 25%;
 	right: 20%;
 	text-align: right;
 	font-size: 2.2rem;
@@ -212,7 +212,7 @@ main h2 {
 }
 
 #treeImage {
-	height: 50vh;
+	height: 50%;
 	position: absolute;
 	bottom: 0px;
 	right: 0px;
@@ -286,6 +286,7 @@ main h2 {
 	opacity: 0;
 	transition: opacity 500ms;
 	max-height: 80vh;
+	max-width: 100vw;
 }
 
 #fullScreenImage.displayed {
